# NVDEC-Receive

./: CMakeLists.txt
src/: AppDec.cpp  AppDec.hpp  main.cpp  read_data_from_shm.cpp  read_data_from_shm.hpp
